avcodec/cuviddec: signal that the decoder sets all output frame properties

Fixes memleaks described in ticket #9082.

Signed-off-by: James Almer <jamrial@gmail.com>